# advanced-datastructures-st22

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bp_benchmark.sh  build.sh  build_with_coverage.sh  bv_benchmark.sh  extract_coverage.sh
.github/workflows/: ci_gtest.yml
advanced-datastructures-st22/: CMakeLists.txt
advanced-datastructures-st22/src/: bv_query.hpp  main.cpp  util.hpp
advanced-datastructures-st22/src/bp/: dynamic_bp_tree.hpp  query.hpp  simple_tree.hpp
advanced-datastructures-st22/src/bv/: bv_query.hpp  dynamic_bitvector.hpp  query.hpp  simple_bitvector.hpp
advanced-datastructures-st22/src/ds/: bitset.hpp  bitvector.hpp
advanced-datastructures-st22/src/meta/: empty.hpp
advanced-datastructures-st22/tests/: CMakeLists.txt  bitset_test.cpp  bitvector_test.cpp  bp_integration_test.cpp  bv_integration_test.cpp  dynamic_bitvector_excess_test.cpp  dynamic_bitvector_test.cpp  dynamic_bp_tree_test.cpp  reliability_test.cpp  simple_bitvector_excess_test.cpp  simple_bitvector_performance_test.cpp  simple_bitvector_test.cpp  simple_tree_test.cpp
examples/: bp.txt  bp_configs.txt  bp_output.txt  bp_results.txt  bv_configs.txt  bv_results.txt  long.txt  long_output.txt  results.db  results.txt  run_long.sh  run_simple.sh  simple.txt  simple_bp.txt
